--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cohitherewer.github.io/Portfolio/",
+  "homepage": "https://cohitherewer.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -13,9 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.16.4",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/styles": "^5.16.4",
+    "@mui/x-data-grid": "^7.11.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.3.8",
